add size parameter

--- a/mscoretest.html
+++ b/mscoretest.html
@@ -5,11 +5,20 @@
 	<title>Upload form test</title>
 </head>
 <body>
-	<h2>Upload form test</h2>
+	<h2>Upload form test, return png</h2>
 	<div class="form">
 		<form action="http://localhost:8081/convert" enctype="multipart/form-data" method="post">
 			<div><input type="file" name="score"></div>
-			<div><input type="hidden" name="format" value=\"png\"></div>
+			<div><input type="hidden" name="format" value="png"></div>
+			<div><input type="submit" name="submit" value="Submit" /></div>
+		</form>
+	</div>
+	<h2>Upload form test, scaled 150%</h2>
+	<div class="form">
+		<form action="http://localhost:8081/convert" enctype="multipart/form-data" method="post">
+			<div><input type="file" name="score"></div>
+			<div><input type="hidden" name="format" value="png"></div>
+			<div><input type="hidden" name="size" value="150"></div>
 			<div><input type="submit" name="submit" value="Submit" /></div>
 		</form>
 	</div>
