--- a/mscoretest.html
+++ b/mscoretest.html
@@ -22,5 +22,15 @@
 			<div><input type="submit" name="submit" value="Submit" /></div>
 		</form>
 	</div>
+	<h2>Upload form test, transpose up major second, return png</h2>
+	<div class="form">
+		<form action="http://localhost:8081/convert" enctype="multipart/form-data" method="post">
+			<div><input type="file" name="score"></div>
+			<div><input type="hidden" name="format" value="png"></div>
+			<div><input type="hidden" name="size" value="150"></div>
+			<div><input type="hidden" name="transpose" value="4"></div>
+			<div><input type="submit" name="submit" value="Submit" /></div>
+		</form>
+	</div>
 </body>
 </html>
